--- a/Resources/views/EmailNotification/update.html.twig
+++ b/Resources/views/EmailNotification/update.html.twig
@@ -28,16 +28,17 @@
     {% endif %}
     {{ UI.cancelButton(path('oro_notification_emailnotification_index')) }}
     {% set html = UI.saveAndCloseButton({
-        'action': {
-            'route': 'oro_notification_emailnotification_index'
-        }
+        'route': 'oro_notification_emailnotification_index'
     }) %}
+    {% if resource_granted('oro_notification_emailnotification_create') %}
+        {% set html = html ~ UI.saveAndNewButton({
+            'route': 'oro_notification_emailnotification_create'
+        }) %}
+    {% endif %}
     {% if form.vars.value.id or resource_granted('oro_notification_emailnotification_update') %}
         {% set html = html ~ UI.saveAndStayButton({
-            'action': {
-                'route': 'oro_notification_emailnotification_update',
-                'params': {'id': '$.id'}
-            }
+            'route': 'oro_notification_emailnotification_update',
+            'params': {'id': '$id'}
         }) %}
     {% endif %}
     {{ UI.dropdownSaveButton({'html': html}) }}
